@@ -1,3 +1,6 @@
+20210418:
+  * [gfursin] fixed travis for the new CK version
+
 20210411:
   * [gfursin] fixed travis and updated news
 
